# synthetic-image-generation

./: README.md  arguments.py  main.py  pyproject.toml  report.txt  requirements.txt  test.py  utils.py
agents/: context_analyst.py  data_engineer.py  image_generator.py  quality_reviewer.py  report_manager.py
crews/: synthesis_crew.py
images/output/dog/: report.json
images/output/fire/: report.json
images/output/ladybug/: report.json
tasks/: task_definitions.py
tools/: file_tools.py  gemini_tools.py  image_tools.py
